style: fix Korean text line-wrap bugs with keep-all and manual line breaks

--- a/index.css
+++ b/index.css
@@ -109,6 +109,7 @@ html, body {
   line-height: 1.55;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  word-break: keep-all;
 }
 
 a {
